[gd_scene load_steps=2 format=3 uid="uid://knmke0had48s"]

[ext_resource type="Script" uid="uid://c06q0tliaf363" path="res://lvl_2_generator.gd" id="1_lhlxu"]

[node name="Lvl2Generator" type="Node2D"]
script = ExtResource("1_lhlxu")

[node name="counter" type="Label" parent="."]
offset_left = 236.0
offset_top = 107.0
offset_right = 1004.0
offset_bottom = 358.0
pivot_offset = Vector2(-801, -72)
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 90
text = "Your in this scene
"
horizontal_alignment = 1

[node name="Level2_prob" type="Label" parent="."]
offset_left = 353.0
offset_top = 255.0
offset_right = 864.0
offset_bottom = 424.0
theme_override_font_sizes/font_size = 80
horizontal_alignment = 1

[node name="Back" type="Button" parent="."]
offset_left = 399.0
offset_top = 456.0
offset_right = 843.0
offset_bottom = 590.0
theme_override_font_sizes/font_size = 60
text = "Previous Scene  "

[node name="MainTimer" type="Timer" parent="."]

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="timeout" from="MainTimer" to="." method="_on_main_timer_timeout"]
